# knowledge-semantic

./: LICENSE  README.md  pyproject.toml
docs/: knowledge-structures.md  llm-bootstrap-guide.md
docs/superpowers/specs/: 2026-04-08-readme-and-docs-redesign.md
knowledge_semantic/: __init__.py  __main__.py  frontmatter.py  mcp_server.py  store.py  version.py
tests/: conftest.py  test_frontmatter.py  test_mcp_server.py  test_store.py
