[project]
name = "knowledge-semantic"
version = "0.1.0"
description = "Semantic search MCP server for curated knowledge files using ChromaDB."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "chromadb>=0.5.0,<0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_semantic"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
